Tests/Error/InHandler/.build/throworiginal.pr
{
  "name": "ThrowOriginal",
  "description": "Throws an error with message \u0022original error\u0022 and status code 500 (default), with no key.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022original error\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "original error",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Error/InHandler/ThrowOriginal.goal",
  "prPath": "/Error/InHandler/.build/throworiginal.pr",
  "hash": "9dbe60fc7451268112efa128e62230ccb7b045feed3ae32b253cd3de24f820a3",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}